# minesweeper

./: .gitignore  README.md  game.py  iter.sh  mineboard.py  myboard.py  myboard_example.py  parse_minesweeperonline.py  pyproject.toml  solver.py  solver1.py
data/: get  response.dump
