[tool.poetry]
name = "minesweeper"
version = "0.1.0"
description = ""
authors = ["Sarkoxed <sarkoxed2013@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
z3-solver = "^4.13.0.0"
lxml = "^5.3.0"
lxml-html-clean = "^0.2.0"
selenium = "^4.23.1"
termcolor = "^2.4.0"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
